<resources>
    <string name="app_name">UCSCParking</string>
    <string name="title_activity_maps">Map</string>
    <string name="available_spots"> </string>

    <!-- Strings related to titles of pages -->
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_spots">Parking Spots</string>
    <string name="title_profile">Profile</string>
    <string name="set_filter">Set Filter</string>
    <string name="profile">Profile</string>
    <string name="parking_status">Parking Status</string>
    <string name="logout">Log Out</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_status">Current Status</string>
    <string name="title_free_spots">Free Spots</string>
    <string name="title_specific_lot">Parking Lot</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_creation">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="authorization_failed">Authorization failed to complete</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="title_activity_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>

    <!-- Strings related to profile -->
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel_changes">Cancel Changes</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <!-- Strings related to filtering -->
    <string name="dialog_title">Filters</string>
    <string name="dialog_message">Select which items to display</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- Strings related to current status -->
    <string name="parked_status">You are currently parked in spot: </string>
    <string name="not_parked_status">You are currently not parked</string>
    <string name="time_remaining">Time Remaining: </string>
    <string name="valid_parking">Valid</string>
    <string name="invalid_parking">Invalid</string>
    <string name="verify_spot">Verify Parking</string>
    <string name="cancel_spot">Cancel Parking</string>

    <!-- Strings related to bluetooth -->
    <string name="nearby_spots">Nearby Spots</string>
    <string name="claim_spot">Claim Spot</string>

    <!-- Strings related to parking list -->
    <string name="free_spots">Free Spots: %1$s\n</string>
    <string name="spot_list">Spot List: \n%1$s</string>

    <!-- Strings related to parking areas -->
    <string name="east_remote">East Remote</string>
    <string name="west_remote">West Remote</string>
    <string name="west_core">West Core</string>
    <string name="cowell">Cowell</string>
    <string name="stevenson">Stevenson</string>
    <string name="crown">Crown</string>
    <string name="merill">Merill</string>
    <string name="kresge">Kresge</string>
    <string name="porter">Porter</string>
    <string name="oakes">Oakes</string>
    <string name="rc">Rachel Carson</string>
    <string name="c9">College Nine</string>
    <string name="c10">College Ten</string>
    <string name="hahn">Hahn Student Services</string>
    <string name="baskin">Jack Baskin Engineering</string>
    <string name="opers">OPERS</string>

</resources>
