<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_white_24px"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/filter"
        android:title="@string/set_filter"
        app:showAsAction="never"/>
    <item android:id="@+id/profile"
        android:title="@string/profile"
        app:showAsAction="never"/>
    <item android:id="@+id/current_status"
        android:title="@string/current_status"
        app:showAsAction="never"/>
    <item android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"/>
</menu>